--- a/qr_scanner.html
+++ b/qr_scanner.html
@@ -7,8 +7,8 @@
     <title>Document</title>
     <style>
         body {
-            margin:0% ;
-            height: 100%;
+            width: 100vh;
+            height: 100vh ;
             background-color: #d5e1ef;
         }
         .white_outer {
